--- a/08.ipynb
+++ b/08.ipynb
@@ -2,21 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "with open('input.txt', 'r') as f:\n",
-    "    data = f.readlines()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -29,7 +18,7 @@
       "███  █  █ ███  █  █ █    █    █  █ █      █  █    \n",
       "█ █  █  █ █ █  █  █ █  █ █    █  █ █      █  █    \n",
       "█  █  ██  █  █  ██   ██  ████  ██  ████  ███ ████ \n",
-      "121 pixels lit up!\n"
+      "121 Pixels are lit up\n"
      ]
     }
    ],
@@ -37,85 +26,32 @@
     "import re\n",
     "import time\n",
     "from IPython.display import clear_output\n",
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib.patches as patches\n",
+    "import numpy as np\n",
     "\n",
-    "with open('input.txt', 'r') as f:\n",
-    "    data = f.readlines()\n",
-    "\n",
-    "unlit = \" \"\n",
-    "lit = \"█\"\n",
-    "\n",
-    "mat = [[unlit] * 50 for _ in range(6)]\n",
-    "\n",
-    "def swap(m, i1, j1, i2, j2):\n",
-    "    m[i1][j1], m[i2][j2] = m[i2][j2], m[i1][j1]\n",
-    "\n",
-    "def rect(m, x, y1):\n",
-    "    for i in range(0, y):\n",
-    "        for j in range(0, x):\n",
-    "            m[i][j] = lit\n",
-    "\n",
-    "def shift(m, x=0, column=True, dir=1):\n",
-    "    i = x\n",
-    "    size = len(m) if column else len(m[i])\n",
-    "\n",
-    "    if dir == 1:\n",
-    "        for j in range(size-1, -1, -1):\n",
-    "            if j > 0:\n",
-    "                if column:\n",
-    "                    swap(m, j, i, j-1, i)\n",
-    "                else:\n",
-    "                    swap(m, i, j, i, j-1)\n",
-    "    else:\n",
-    "        for j in range(0, size):\n",
-    "            if j < size-1:\n",
-    "                if column:\n",
-    "                    swap(m, j, i, j-1, i)\n",
-    "                else:\n",
-    "                    swap(m, i, j, i, j+1)\n",
-    "\n",
-    "def print_matrix(m):\n",
+    "def print_mat(mat):\n",
     "    clear_output(wait=True)\n",
-    "    for i in range(0, len(m)):\n",
-    "        for j in range(0, len(m[i])):\n",
-    "            print(mat[i][j], end=\"\")\n",
-    "        print()\n",
-    "    # time.sleep(0.3)\n",
-    "\n",
-    "\n",
-    "for line in data:\n",
-    "    command = line.split()\n",
-    "    if command[0] == \"rect\":\n",
-    "        params = command[1].split(\"x\")\n",
-    "        x = int(params[0])\n",
-    "        y = int(params[1])\n",
-    "        rect(mat, x, y)\n",
-    "    elif command[0] == \"rotate\":\n",
-    "        amount = int(command[-1])\n",
-    "        column = command[1] == \"column\"\n",
-    "        index = int(command[2].split(\"=\")[1])\n",
-    "        for i in range(0, amount):\n",
-    "            shift(mat, index, column, 1)\n",
-    "    print_matrix(mat)\n",
-    "    time.sleep(0.0333)\n",
-    "\n",
-    "c = [mat[i].count(lit) for i in range(len(mat))]\n",
-    "print_matrix(mat)\n",
-    "print(\"%d pixels lit up!\" % sum(c))"
+    "    print('\\n'.join(map(''.join, mat.astype(str))).translate({ord('0'):ord(' '), ord('1'):ord('█')}))\n",
+    "    \n",
+    "    \n",
+    "array = np.zeros([6, 50], dtype=int)\n",
+    "with open('input.txt') as fp:\n",
+    "    for line in fp:\n",
+    "        a, b = map(int,re.findall(r'\\d+', line))\n",
+    "        inst, *text = line.split(' ')\n",
+    "        if inst=='rect':\n",
+    "            array[:b,:a] = 1\n",
+    "        elif text[0]=='row':\n",
+    "            array[a] = np.roll(array[a], b)\n",
+    "        elif text[0]=='column':\n",
+    "            array.T[a] = np.roll(array.T[a], b)\n",
+    "        print_mat(array)\n",
+    "        time.sleep(1. / 60)\n",
+    "    print(np.sum(array), \"Pixels are lit up\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
+  "celltoolbar": "Edit Metadata",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
